--- a/android/app/key.properties
+++ b/android/app/key.properties
@@ -1,4 +1,4 @@
 storePassword=victor
 keyPassword=victor
-keyAlias=key
-storeFile=c:/Users/Viktar/key.jks
+keyAlias=upload
+storeFile=/Users/victornkpubre/lmmkey.jks
